<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EMICalculators.EMICalculatorActivity">

    <RelativeLayout
        android:id="@+id/tbMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D5B68"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/lexenddeca_bold"
            android:gravity="center"
            android:text="@string/emi_calculator"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbMenu"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="@string/principal_amount"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/principal_amount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border1"
            android:fontFamily="@font/lexenddeca_medium"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="@string/interest"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border1"
            android:fontFamily="@font/lexenddeca_medium"
            android:hint="@string/enter_interest"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="13dp"
        android:gravity="end">

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="@string/year"
            android:textColor="@color/dark_blue"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/replace"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/replace"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="@string/month"
            android:textColor="@color/dark_blue"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="@string/loan_tenure"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loan_tenure"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border1"
            android:fontFamily="@font/lexenddeca_medium"
            android:hint="@string/enter_loan_tenure"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title3"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/border2"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="@string/calculate"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:backgroundTint="@null" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/border3"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="@string/reset"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            app:backgroundTint="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/percentage_pie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/title4"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:background="@drawable/border">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/darkbluedot"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/darkbluedot"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/amount_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/lexenddeca_semibold"
                    android:text="@string/principal_amount_20_00"
                    android:textColor="@color/dark_blue"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/orangedot"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/orangedot" />

                <TextView
                    android:id="@+id/total_payment_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/lexenddeca_semibold"
                    android:text="@string/total_payment_80_00"
                    android:textColor="#F2A73B"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/all_calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/percentage_pie"
        android:background="@drawable/border"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_toStartOf="@+id/total_interest_amount"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/total_interest_amount"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/total_interest_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/_0_00"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_toStartOf="@+id/total_principal"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/total_principal"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/total_principal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/_0_00"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_toStartOf="@+id/total_payment"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/total_payment"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_marginHorizontal="10sp"
                android:layout_toStartOf="@+id/total_payment"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/principal_interest"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/total_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/_0_00"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_toStartOf="@+id/emi_monthly"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/emi_monthly_payment"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/emi_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/lexenddeca_medium"
                android:text="@string/_0_00"
                android:textSize="12sp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>