<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="20dp"
        android:padding="10sp"
        android:background="@drawable/border1">

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/lexenddeca_semibold"
            android:text="@string/amount_20_000_10_0"/>

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_below="@+id/amount"
            android:textColor="@color/history_color"
            android:textSize="12sp"
            android:fontFamily="@font/lexenddeca_semibold"
            android:text="@string/_24_month"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/amount"
            android:textColor="@color/history_color"
            android:textSize="12sp"
            android:fontFamily="@font/lexenddeca_semibold"
            android:text="@string/_10_nov_2023"/>
    </RelativeLayout>

</RelativeLayout>