<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.HistoryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/tbMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D5B68"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/delete"
            android:fontFamily="@font/lexenddeca_bold"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/deletehistory" />
    </RelativeLayout>

        <TextView
            android:id="@+id/noAnyHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tbMenu"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lexenddeca_bold"
            android:textColor="@color/gray"
            android:text="@string/no_any_emi_calculation"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_below="@+id/tbMenu"
        android:layout_marginTop="10sp"
        tools:listitem="@layout/item_history_list"/>

    </RelativeLayout>
</FrameLayout>