<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.PrivacyPolicyFragment">

    <RelativeLayout
        android:id="@+id/tbMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D5B68"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/lexenddeca_bold"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tbMenu"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexenddeca_bold"
            android:text="@string/privacy_policy_term_of_use"
            android:textColor="@color/dark_blue"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="KMSOFT built the FINANCIAL CALCULATOR app as a free app. This SERVICE is provided by KMSOFT intended for use as is." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/lexenddeca_medium"
            android:text="This page use to inform users regarding out policies with the collection,use and disclosure of Personal information if anyone decided to use this service."/>

    </LinearLayout>

</RelativeLayout>